--- a/hop-mill/Cargo.toml
+++ b/hop-mill/Cargo.toml
@@ -8,3 +8,8 @@ edition = "2018"
 
 [dependencies]
 rocket = "0.4.5"
+serde = { version = "1.0", features = ["derive"] }
+
+[dependencies.rocket_contrib]
+version = "0.4.5"
+features = ["handlebars_templates", "tera_templates"]
