--- a/hop-mill/Cargo.toml
+++ b/hop-mill/Cargo.toml
@@ -10,7 +10,10 @@ edition = "2018"
 tera = "1"
 rocket = "0.4.5"
 serde = { version = "1.0", features = ["derive"] }
+diesel =         { version = "*", default-features = false, features = ["sqlite"] }
+diesel_codegen = { version = "*", default-features = false, features = ["sqlite", "nightly"] }
 
 [dependencies.rocket_contrib]
 version = "0.4.5"
 features = ["handlebars_templates", "tera_templates"]
+
