--- a/hop-mill/Cargo.toml
+++ b/hop-mill/Cargo.toml
@@ -12,6 +12,7 @@ rocket = "0.4.5"
 serde = { version = "1.0", features = ["derive"] }
 diesel = { version = "1.4.4", features = ["postgres"] }
 dotenv = "0.15.0"
+firestore-db-and-auth = "0.6.0"
 
 [dependencies.rocket_contrib]
 version = "0.4.5"
