--- a/hop-mill/Cargo.toml
+++ b/hop-mill/Cargo.toml
@@ -10,6 +10,7 @@ edition = "2018"
 tera = "1"
 rocket = "0.4.5"
 serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 diesel = { version = "1.4.4", features = ["postgres"] }
 dotenv = "0.15.0"
 firestore-db-and-auth = "0.6.0"
